<resources>
    <string name="app_name">Regibici</string>
    <string name="Login">Escribe tu usuario</string>
    <string name="BtnLogin">Login</string>
    <string name="password">Escribe tu constraseña</string>
    <string name="Btbicicletas">Bicicletas</string>
    <string name="Btregistrarbici">Registrar</string>
    <string name="Btcambiar">Cambiar</string>
    <string name="Btdenunciar">Denunciar</string>
    <string name="Logo">Regibici</string>
    <string name="BtnIngresar">Ingresar</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="Crea">Crea una cuenta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tbRegNombre">"Ingrese sus nombres"</string>
    <string name="tbRegApellido">"Ingrese sus apellidos"</string>

</resources>