<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myblue"
    tools:context=".DenunciarActivity">

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/regibici"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt1Bicicletas"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/Btbicicletas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btRegistrar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.17"
        android:hint="@string/Btregistrarbici"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btCambiar"
        app:layout_constraintStart_toEndOf="@id/bt1Bicicletas"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btCambiar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.17"
        android:hint="@string/Btcambiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btDenunciar"
        app:layout_constraintStart_toEndOf="@id/btRegistrar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDenunciar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/Btdenunciar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btCambiar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:hint="Denunciar"
        app:layout_constraintVertical_bias="0.7"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>