<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myblue"
    tools:context=".LoginScreen" >

    <View
        android:id="@+id/fondoblanco4"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginBottom="216dp"
        android:background="@drawable/fondoblanco"
        android:radius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/regibiciLogo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:src="@drawable/regibici"
        app:layout_constraintBottom_toBottomOf="@id/fondoblanco"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fondoblanco4"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/tbUser"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="364dp"
        android:autofillHints="emailAddress"
        android:background="#E8E8E8"
        android:hint="@string/Login"
        android:inputType="text"
        android:textColor="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fondoinicio"
        app:layout_constraintVertical_bias="0." />

    <EditText
        android:id="@+id/tbPassword"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="300dp"
        android:autofillHints="password"
        android:background="#E8E8E8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbName"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnlogin4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="232dp"
        android:hint="@string/BtnLogin"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbApellido"
        app:layout_constraintVertical_bias="0.05" />

</androidx.constraintlayout.widget.ConstraintLayout>