<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myblue"
    tools:context=".BicicletasActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="10dp"
        android:orientation="vertical"
        android:layout_height="10dp"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="10dp"
        android:orientation="horizontal"
        android:layout_height="10dp"
        app:layout_constraintGuide_percent="0.5"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="10dp"
        android:orientation="horizontal"
        android:layout_height="10dp"
        app:layout_constraintGuide_percent="0.75"
        />


    
    <View
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/regibici"/>

    <Button
        android:id="@+id/bt1Bicicletas"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/Btbicicletas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btRegistrar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/Btregistrarbici"
        android:onClick="Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btCambiar"
        app:layout_constraintStart_toEndOf="@id/bt1Bicicletas"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/btCambiar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.17"
        android:hint="@string/Btcambiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btDenunciar"
        app:layout_constraintStart_toEndOf="@id/btRegistrar"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btDenunciar"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/Btdenunciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btCambiar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />



    <Button
        android:id="@+id/buttonBici1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:hint="Bicicleta 1"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guide2"
        app:layout_constraintEnd_toStartOf="@+id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/buttonBici2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/guide2"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Bicicleta 2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/guide1"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/buttonBici3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:hint="Bicicleta 3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guide3"
        app:layout_constraintEnd_toStartOf="@+id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide2" />

    <Button
        android:id="@+id/buttonBici4"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:hint="Bicicleta 4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guide3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide1"
        app:layout_constraintTop_toTopOf="@+id/guide2" />

</androidx.constraintlayout.widget.ConstraintLayout>
